# clipcast

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PRODUCT_SPEC.md  README.md  docker-compose.v2.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  supervisord.conf
backend/: .env.evals.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 3c1649611245_baseline_schema.py  3e51d4cf1bd8_add_refinement_columns.py  3e5dad2f9198_add_scan_acast_ads_config_column.py  3e5dad2f9198_add_scan_acast_host_reads_config_column.py  7b7b36cd579a_add_episode_image_url.py  a1f2c3d4e5b6_add_keep_raw_episodes_to_podcast_shows.py
backend/app/: config.py  database.py  main.py  models.py  tasks.py  worker.py
backend/app/routers/: bug_reports.py  config.py  episodes.py  feed.py  podcasts.py  providers.py  reports.py  search.py
backend/app/services/: acast.py  analysis.py  chunking.py  download.py  editor.py  feed.py  linear.py  openrouter_models.py  prompts.py  providers.py  recommendations.py  refinement.py  rss.py  silence.py  transcription.py
backend/evals/: .env.evals.example  README.md  acast.py  acoustic.py  analysis.py  cli.py  metrics.py  pipeline.py  providers.py  run.py
backend/evals/fixtures/: .gitignore
backend/evals/fixtures/cult-of-the-manager-2026-05-05/: expected.json  meta.json  transcription.json
backend/evals/fixtures/next-top-4-prediction-2026-05-21/: expected.json  meta.json  transcription.json
backend/evals/reports/: 20260521T210207Z_flash-2.5-baseline.json  20260521T212343Z_flash-2.5-baseline.json  20260521T213157Z_flash-2.5-baseline.json  20260521T213507Z_flash-2.5-baseline.json  20260521T213807Z_flash-vs-lite.json  20260521T214107Z_flash-vs-lite.json  20260521T214139Z_flash-vs-lite.json  20260521T214206Z_flash-vs-lite.json  20260521T214228Z_flash-vs-lite.json  20260521T214302Z_flash-vs-lite.json  20260521T214737Z_flash-vs-lite.json  20260521T214855Z_flash-vs-lite.json  20260521T215018Z_flash-vs-lite.json  20260521T215138Z_flash-vs-lite.json  20260521T215247Z_flash-vs-lite.json  20260522T160205Z_flash-vs-lite.json  20260522T160303Z_flash-vs-lite.json  20260522T160357Z_flash-vs-lite.json  20260522T160454Z_flash-vs-lite.json  20260522T160557Z_flash-vs-lite.json  20260522T161216Z_flash-2.5-vs-3.5.json  20260522T161356Z_flash-2.5-vs-3.5.json  20260522T161513Z_flash-2.5-vs-3.5.json  20260522T161706Z_flash-2.5-vs-3.5.json  20260522T161911Z_flash-2.5-vs-3.5.json
backend/evals/runs/: example.toml  flash-2.5-baseline.toml  flash-2.5-vs-3.5.toml  flash-vs-lite.toml
backend/evals/scripts/: count_transcript_tokens.py
backend/s6/s6-rc.d/api/: run
backend/s6/s6-rc.d/data-dirs/: up
backend/s6/s6-rc.d/db-init/: up
backend/s6/s6-rc.d/redis/: run
backend/s6/s6-rc.d/worker-ai/: run
backend/s6/s6-rc.d/worker-default/: run
backend/s6/s6-rc.d/worker-whisper/: run
backend/s6/scripts/: db-init
backend/tests/: conftest.py  test_acast.py  test_alembic_schema.py  test_api_bug_reports.py  test_api_config.py  test_api_episodes.py  test_api_podcasts.py  test_api_providers.py  test_api_search.py  test_chunking.py  test_evals_acoustic.py  test_evals_metrics.py  test_evals_pipeline.py  test_evals_providers.py  test_evals_run.py  test_providers.py  test_services.py  test_silence.py  test_tasks_refine_boundaries.py  test_tasks_scan_acast_ads.py  test_tasks_scan_host_reads.py
core/: admin.py  models.py  tasks.py  urls.py  views.py
frontend/: package-lock.json  package.json  (+3 more)
(+107 files in other folders)
