[project]
name = "clipcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.9",
    "django-pydantic-field>=0.4.1",
    "django-q2>=1.9.0",
    "feedgen>=1.0.0",
    "feedparser>=6.0.12",
    "google-genai>=1.0.0",
    "gunicorn>=23.0.0",
    "pydub>=0.25.1",
    "requests>=2.32.5",
    "srt>=3.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.15.1",
    "responses>=0.25.8",
    "ruff>=0.14.10",
]


[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    ".idea",
    ".vscode",
    ".pytest_cache",
    "__pycache__",
    "migrations",
    "staticfiles",
    ".cache",
    "_eval",
    "_books",
    "_test_calibre",
    "build",
    "dist",
    "wheels",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DJ",    # flake8-django
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "PIE",   # flake8-pie
    "RUF",   # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "DJ001",  # Avoid using null=True on string-based fields (sometimes needed)
    "RUF012", # Mutable class attributes, clashes with Django
    "RUF013"  # Implicit optional type
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"manage.py" = ["T20"]

# Allow unused imports and variables in __init__.py files
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["core", "project"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

